# googleapis

./: BUILD.bazel  WORKSPACE
.cloudbuild/: Dockerfile.bazel-zip  cloudbuild.yaml
gapic/api/: artman_bigtable.yaml  artman_bigtable_admin.yaml  artman_clouddebugger.yaml  artman_datastore.yaml  artman_errorreporting.yaml  artman_functions.yaml  artman_iam.yaml  artman_language_v1.yaml  artman_language_v1beta2.yaml  artman_logging.yaml  artman_longrunning.yaml  artman_monitoring.yaml  artman_pubsub.yaml  artman_spanner.yaml  artman_spanner_admin_database.yaml  artman_spanner_admin_instance.yaml  artman_speech_v1.yaml  artman_speech_v1beta1.yaml  artman_trace.yaml  artman_videointelligence.yaml  artman_vision.yaml
google/bigtable/v2/: bigtable.proto  data.proto
google/cloud/runtimeconfig/v1beta1/: resources.proto  runtimeconfig.proto
google/cloud/videointelligence/v1beta1/: video_intelligence.proto
google/cloud/vision/v1/: BUILD.bazel
google/datastore/v1/: datastore.proto  entity.proto  query.proto
google/datastore/v1beta3/: datastore.proto  entity.proto  query.proto
google/devtools/clouddebugger/v2/: controller.proto  data.proto  (+1 more)
google/iam/v1/: iam_policy.proto  policy.proto
google/logging/type/: http_request.proto  log_severity.proto
google/logging/v2/: log_entry.proto  logging.proto  logging_config.proto  logging_metrics.proto
google/longrunning/: operations.proto
google/monitoring/v3/: common.proto  group.proto  group_service.proto  metric.proto  metric_service.proto
google/pubsub/v1/: pubsub.proto
google/spanner/v1/: keys.proto  mutation.proto  query_plan.proto  result_set.proto  spanner.proto  transaction.proto  type.proto
(+12 files in other folders)
