
# This is an API workspace, having public visibility by default makes perfect sense.
package(default_visibility = ["//visibility:public"])

##############################################################################
# Common
##############################################################################
proto_library(
    name = "vision_proto",
    srcs = [
        "geometry.proto",
        "image_annotator.proto",
        "text_annotation.proto",
        "web_detection.proto",
    ],
    deps = [
        "@com_google_api_common_protos//:google_api_annotations_proto",
        "@com_google_api_common_protos//:google_api_longrunning_proto",
        "@com_google_api_common_protos//:google_longrunning_operations_proto",
        "@com_google_api_common_protos//:google_rpc_status_proto",
        "@com_google_api_common_protos//:google_type_color_proto",
        "@com_google_api_common_protos//:google_type_latlng_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

